# ch-infrastructure-as-code

./: Makefile  README.md  app.py  pyproject.toml
src/: cdk_complex_stack.py  cdk_construct.py  cdk_stack.py  cdk_template.yaml  cfn_template.yaml  cfn_template_complex.yaml  construct_layers.py
